Revert "Nuget publish test."
This reverts commit cfd80d72a2b1a687619c86552dbcb5e8b0ed0813.

--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="Current">
   <PropertyGroup>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageId>CRPE-MiNET</PackageId>
+    <PackageId>MiNET</PackageId>
     <Version>0.0.0</Version>
     <Authors>gurun</Authors>
     <Company>Niclas Olofsson</Company>
